--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "wangcai-react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Leerongyue.github.io/morney-react-website/",
   "dependencies": {
     "@ant-design/icons": "^4.1.0",
     "@babel/core": "7.9.0",
@@ -46,6 +47,7 @@
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-resolve": "24.9.0",
     "jest-watch-typeahead": "0.4.2",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "0.9.0",
     "node-sass": "npm:dart-sass",
     "optimize-css-assets-webpack-plugin": "5.0.3",
@@ -97,6 +99,7 @@
     ]
   },
   "devDependencies": {
+    "@types/jquery": "^3.3.38",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.0",
     "svg-sprite-loader": "^5.0.0",
