--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "deploy": "sh scripts/deploy.sh"
+    "deploy_github": "sh scripts/deploy_github.sh",
+    "deploy_gitee": "sh scripts/deploy_gitee.sh"
   },
   "eslintConfig": {
     "extends": "react-app"
